# remniw

./: CMakeLists.txt  README.md
cmake/: ExternalAntlr4Cpp.cmake
docs/: RegAlloc.md
examples/: 7x7.tip  a3.tip  a4.tip  a7.tip  apply2.tip  available.tip  block.tip  block_decl.tip  cfa.tip  cfg.tip  cmpfunc.tip.todo  code.tip  comp.tip  constants1.tip  constants2.tip  copyconst.tip  copyconst2.tip  div.tip  ex1.tip  factorial_iterative.tip  factorial_recursive.tip  fib.tip  func.tip  if_short_if.tip  input1.tip  interval0.tip  interval1.tip  interval2.tip  interval3.tip  liveness.tip  locals.tip  loop.tip  mccarthy91.tip  mono.tip  mono2.tip  norm_while.tip  normalised.tip  onelevel.tip  pointers.tip  poly4.tip  (+17 more)
examples.bk/: code.tip  copyconst.tip  copyconst2.tip
grammar/: Remniw.g4  TIP.g4.bk
src/: CMakeLists.txt  main.cpp
src/asm/: CMakeLists.txt  a.out  helper.h  rwir copy.brg  rwir.brg  rwir.brg.mem.bk  rwir.cpp  rwir.h  sum.rw  test.llc.s  test.mem2reg.ll  test.s
src/asm/asm-test/: a.out  a3.s  a3.s.fail  a4.ll  a4.ori.ll  a4.ori.s  a4.rw  a4.s  a7.ll  a7.ori.s  a7.rw  a7.s  a72.ll  a72.rw  a72.s  a73.ll  a73.rw  a73.s  apply.man.s.fail  apply.s.fail  available.ll  available.ori.ll  available.ori.rw  available.ori.s  available.rw  available.s  block.llc.s  block.s  block_decl.ll  block_decl.ori.rw  block_decl.ori.s  block_decl.rw  block_decl.s  cfa.ll  cfa.rw  cfa.s  cfg.ll  cfg.ori.ll  cfg.ori.s  cfg.rw  (+90 more)
src/codegen/: CMakeLists.txt  CodeGenVisitor.h  CodeGenerator.cpp  CodeGenerator.h  CodeGeneratorImpl.cpp  CodeGeneratorImpl.h
src/codegen/asm/: ASMCodeGenerator.brg  ASMCodeGeneratorHelper.cpp  ASMCodeGeneratorHelper.h  AsmBuilder.h  AsmBuilderHelper.brg  AsmBuilderHelper.gen  AsmCodeGenetator.h  AsmContext.cpp  AsmContext.h  AsmFunction.h  AsmInstruction.cpp  AsmInstruction.h  AsmOperand.h  AsmPrinter.h  AsmRewriter.h  BrgTreeBuilder.h  CMakeLists.txt  LiveInterval.h  Register.h  RegisterAllocator.cpp  RegisterAllocator.h  a.out  remniw-llc.cpp
src/codegen/asm/asm-test/: 7x7.ll  a.out  a3.fail.s  a3.ll  a3.rw  a4.rw  a7.s  apply.fail.s  apply.ll  apply.rw  available.fail.s  block.ll  block.s  block_decl.s  cfa.s  cfg.s  code.rw  code.s  constants1.ll  constants1.rw  constants1.s  constants13.rw  constants22.s  copyconst.rw  copyconst2.ll  div.rw  div2.ll  div2.s  factorial_iterative.ll  factorial_recursive.fail.s  factorial_recursive.rw  fib.ll  func.ll  func.rw  input1.ll  input1.s  interval1.s  interval3.rw  interval3.s  liveness.s  (+35 more)
src/codegen/ir/: IRCodeGenerator.cpp  IRCodeGeneratorImpl.cpp
test/: 7x7.rw  CMakeLists.txt  a3.rw  a4.rw  a6.rw.todo  a7.rw  (+73 more)
(+20 files in other folders)
